# miniRT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  iaminfinity.rt  main.c  main1.c  main2.c  minimalist.rt  pretty.rt  reflection.rt  transperancy.rt
includes/: bitmap.h  color.h  event_handling.h  event_handling1.h  interactions.h  main_structs.h  maths.h  maths1.h  miniRT.h  minirt.h  mlx.h  objects.h  parser.h  scene.h  tracing.h  vectors.h  visual.h
libft/: .gitignore  Makefile
libft/includes/: get_next_line.h  libft.h  libftprintf.h
libft/srcs/: ft_abs.c  ft_atof.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstget.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstremove.c  ft_lstsearch.c  ft_lstsize.c  ft_max.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  (+13 more)
libft/srcs/ft_printf/: add_width.c  add_width_neg.c  add_width_pos.c  ft_itoa_p.c  ft_itoa_u.c  ft_itoa_x.c  ft_itoa_xx.c  initiate_param.c  libftprintf.c  (+6 more)
scenes/: cyllinder_tra.rt  iaminfinity.rt  mandatory.rt  pretty.rt  reflection.rt  sq.rt  test.rt  transperancy.rt  transperancy_inf.rt  vistavka1.rt  vistovka1.rt  vistovka2.rt
srcs/: color.c  intersect_shapes.c  light.c  main.c  math.c  mlx.c  navigation.c  rendering.c  surface_vectors.c  trace.c  trace_ray.c  utils.c
srcs/engine/: basis.c  bmp.c  color.c  color1.c  color2.c  event_handling.c  event_handling1.c  event_handling2.c  interactions.c  intersect_shapes.c  intersect_shapes1.c  intersect_shapes2.c  light.c  math.c  maths.c  maths1.c  maths2.c  maths3.c  maths4.c  maths5.c  maths6.c  multi_threading.c  multi_threading_bonus.c  rendering.c  surface_vectors.c  trace_ray.c  utils.c  utils1.c  utils2.c  utils3.c  utils4.c  visual.c
srcs/parser/: object_parsing1.c  object_parsing2.c  object_processing.c  parser.c  parser_utils.c  parser_utils1.c  parser_utils2.c
(+16 files in other folders)
